parser_test.output
Grammar

    0 $accept: input $end

    1 input: final_form

    2 final_form: KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'
    3           | decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'

    4 body: %empty
    5     | more

    6 more: while_loop
    7     | if_stmt
    8     | decl_list1
    9     | printf_func
   10     | more while_loop
   11     | more if_stmt
   12     | more decl_list1
   13     | more printf_func

   14 decl_list1: cmd_line
   15           | comment
   16           | decl

   17 decl_list: cmd_line
   18          | comment
   19          | decl
   20          | decl_list decl
   21          | decl_list cmd_line
   22          | decl_list comment

   23 decl: KW_LET decl_body_part
   24     | KW_CONST decl_body_part_c
   25     | KW_CONST func_decl

   26 func_decl: ident_form_part ASSIGN '(' func_parameters_decl ')' ':' data_type FUNC_START_ARROW '{' body '}' ';'
   27          | ident_form_part ASSIGN '(' func_parameters_decl ')' ':' data_type ';'
   28          | ident_form_part ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type ';'
   29          | ident_form_part ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type FUNC_START_ARROW '{' body '}' ';'

   30 decl_body_part: decl_form ':' data_type ';'

   31 decl_body_part_c: decl_form_c ':' data_type ';'

   32 decl_form_c: ident_form_part ASSIGN expr
   33            | decl_form_c ',' ident_form_part ASSIGN expr

   34 decl_form: decl_assign
   35          | decl_form ',' decl_assign

   36 decl_assign: ident_form_part
   37            | ident_form_part ASSIGN expr

   38 ident_form_part: IDENTIFIER
   39                | IDENTIFIER '[' ']'
   40                | IDENTIFIER '[' expr ']'

   41 if_stmt: KW_IF expr KW_THEN body KW_ELSE body KW_FI ';'
   42        | KW_IF expr KW_THEN body KW_FI ';'

   43 while_loop: KW_WHILE expr KW_LOOP body KW_POOL ';'

   44 func_parameters: %empty
   45                | expr
   46                | func_parameters ',' expr

   47 func_parameters_decl: %empty
   48                     | ident_form_part ':' data_type
   49                     | func_parameters_decl ',' ident_form_part ':' data_type

   50 data_type: KW_INT
   51          | KW_BOOL
   52          | KW_REAL
   53          | KW_STRING

   54 printf_func: WRITESTRING_FUNC '(' string ')' ';'
   55            | "teaclib.h" '(' expr ')' ';'
   56            | WRITEREAL_FUNC '(' expr ')' ';'

   57 function_call: IDENTIFIER '(' func_parameters ')'
   58              | READSTRING_FUNC '(' ')'
   59              | READINT_FUNC '(' ')'
   60              | READREAL_FUNC '(' ')'

   61 cmd_line: function_call ';'
   62         | ident_form_part ASSIGN expr ';'
   63         | KW_RETURN expr ';'

   64 comment: LINE_COMMENT
   65        | MLINE_COMMENT

   66 string: STRING

   67 expr: string
   68     | function_call
   69     | ident_form_part
   70     | '+' expr
   71     | '-' expr
   72     | KW_NOT expr
   73     | POSINT
   74     | REAL
   75     | KW_TRUE
   76     | KW_FALSE
   77     | '(' expr ')'
   78     | expr '+' expr
   79     | expr '-' expr
   80     | expr '*' expr
   81     | expr '/' expr
   82     | expr '%' expr
   83     | expr EQUAL_OP expr
   84     | expr NOT_EQUAL_OP expr
   85     | expr LESS_OP expr
   86     | expr LESS_EQUAL_OP expr
   87     | expr KW_AND expr
   88     | expr KW_OR expr


Terminals, with rules where they appear

$end (0) 0
'%' (37) 82
'(' (40) 2 3 26 27 28 29 54 55 56 57 58 59 60 77
')' (41) 2 3 26 27 28 29 54 55 56 57 58 59 60 77
'*' (42) 80
'+' (43) 70 78
',' (44) 33 35 46 49
'-' (45) 71 79
'/' (47) 81
':' (58) 2 3 26 27 28 29 30 31 48 49
';' (59) 26 27 28 29 30 31 41 42 43 54 55 56 61 62 63
'[' (91) 28 29 39 40
']' (93) 28 29 39 40
'{' (123) 2 3 26 29
'}' (125) 2 3 26 29
error (256)
KW_TRUE (258) 75
KW_FALSE (259) 76
KW_INT (260) 2 3 50
KW_REAL (261) 52
KW_BOOL (262) 51
KW_STRING (263) 53
KW_ELSE (264) 41
KW_IF (265) 41 42
KW_THEN (266) 41 42
KW_FI (267) 41 42
KW_WHILE (268) 43
KW_LOOP (269) 43
KW_POOL (270) 43
KW_CONST (271) 2 3 24 25
KW_LET (272) 23
KW_RETURN (273) 63
KW_NOT (274) 72
KW_AND (275) 87
KW_OR (276) 88
NOT_EQUAL_OP (277) 84
LESS_OP (278) 85
LESS_EQUAL_OP (279) 86
FUNC_START_ARROW (280) 2 3 26 29
KW_START (281) 2 3
IDENTIFIER (282) 38 39 40 57
POSINT (283) 73
STRING (284) 66
REAL (285) 74
ASSIGN (286) 2 3 26 27 28 29 32 33 37 62
LINE_COMMENT (287) 64
MLINE_COMMENT (288) 65
READSTRING_FUNC (289) 58
READINT_FUNC (290) 59
READREAL_FUNC (291) 60
WRITESTRING_FUNC (292) 54
"teaclib.h" (293) 55
WRITEREAL_FUNC (294) 56
EQUAL_OP (295) 83


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
input (56)
    on left: 1, on right: 0
final_form (57)
    on left: 2 3, on right: 1
body (58)
    on left: 4 5, on right: 2 3 26 29 41 42 43
more (59)
    on left: 6 7 8 9 10 11 12 13, on right: 5 10 11 12 13
decl_list1 (60)
    on left: 14 15 16, on right: 8 12
decl_list (61)
    on left: 17 18 19 20 21 22, on right: 3 20 21 22
decl (62)
    on left: 23 24 25, on right: 16 19 20
func_decl (63)
    on left: 26 27 28 29, on right: 25
decl_body_part (64)
    on left: 30, on right: 23
decl_body_part_c (65)
    on left: 31, on right: 24
decl_form_c (66)
    on left: 32 33, on right: 31 33
decl_form (67)
    on left: 34 35, on right: 30 35
decl_assign (68)
    on left: 36 37, on right: 34 35
ident_form_part (69)
    on left: 38 39 40, on right: 26 27 28 29 32 33 36 37 48 49 62 69
if_stmt (70)
    on left: 41 42, on right: 7 11
while_loop (71)
    on left: 43, on right: 6 10
func_parameters (72)
    on left: 44 45 46, on right: 46 57
func_parameters_decl (73)
    on left: 47 48 49, on right: 26 27 28 29 49
data_type (74)
    on left: 50 51 52 53, on right: 26 27 28 29 30 31 48 49
printf_func (75)
    on left: 54 55 56, on right: 9 13
function_call (76)
    on left: 57 58 59 60, on right: 61 68
cmd_line (77)
    on left: 61 62 63, on right: 14 17 21
comment (78)
    on left: 64 65, on right: 15 18 22
string (79)
    on left: 66, on right: 54 67
expr (80)
    on left: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
    85 86 87 88, on right: 32 33 37 40 41 42 43 45 46 55 56 62 63 70
    71 72 77 78 79 80 81 82 83 84 85 86 87 88


State 0

    0 $accept: . input $end
    1 input: . final_form
    2 final_form: . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'
    3           | . decl_list KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'
   17 decl_list: . cmd_line
   18          | . comment
   19          | . decl
   20          | . decl_list decl
   21          | . decl_list cmd_line
   22          | . decl_list comment
   23 decl: . KW_LET decl_body_part
   24     | . KW_CONST decl_body_part_c
   25     | . KW_CONST func_decl
   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   61 cmd_line: . function_call ';'
   62         | . ident_form_part ASSIGN expr ';'
   63         | . KW_RETURN expr ';'
   64 comment: . LINE_COMMENT
   65        | . MLINE_COMMENT

    KW_CONST         shift, and go to state 1
    KW_LET           shift, and go to state 2
    KW_RETURN        shift, and go to state 3
    IDENTIFIER       shift, and go to state 4
    LINE_COMMENT     shift, and go to state 5
    MLINE_COMMENT    shift, and go to state 6
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9

    input            go to state 10
    final_form       go to state 11
    decl_list        go to state 12
    decl             go to state 13
    ident_form_part  go to state 14
    function_call    go to state 15
    cmd_line         go to state 16
    comment          go to state 17


State 1

    2 final_form: KW_CONST . KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'
   24 decl: KW_CONST . decl_body_part_c
   25     | KW_CONST . func_decl
   26 func_decl: . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' data_type FUNC_START_ARROW '{' body '}' ';'
   27          | . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' data_type ';'
   28          | . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type ';'
   29          | . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type FUNC_START_ARROW '{' body '}' ';'
   31 decl_body_part_c: . decl_form_c ':' data_type ';'
   32 decl_form_c: . ident_form_part ASSIGN expr
   33            | . decl_form_c ',' ident_form_part ASSIGN expr
   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'

    KW_START    shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    func_decl         go to state 20
    decl_body_part_c  go to state 21
    decl_form_c       go to state 22
    ident_form_part   go to state 23


State 2

   23 decl: KW_LET . decl_body_part
   30 decl_body_part: . decl_form ':' data_type ';'
   34 decl_form: . decl_assign
   35          | . decl_form ',' decl_assign
   36 decl_assign: . ident_form_part
   37            | . ident_form_part ASSIGN expr
   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'

    IDENTIFIER  shift, and go to state 19

    decl_body_part   go to state 24
    decl_form        go to state 25
    decl_assign      go to state 26
    ident_form_part  go to state 27


State 3

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   63 cmd_line: KW_RETURN . expr ';'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36

    ident_form_part  go to state 37
    function_call    go to state 38
    string           go to state 39
    expr             go to state 40


State 4

   38 ident_form_part: IDENTIFIER .  [KW_THEN, KW_LOOP, KW_AND, KW_OR, NOT_EQUAL_OP, LESS_OP, LESS_EQUAL_OP, ASSIGN, EQUAL_OP, '-', '+', '*', '/', '%', ')', ':', ';', ']', ',']
   39                | IDENTIFIER . '[' ']'
   40                | IDENTIFIER . '[' expr ']'
   57 function_call: IDENTIFIER . '(' func_parameters ')'

    '('  shift, and go to state 41
    '['  shift, and go to state 42

    $default  reduce using rule 38 (ident_form_part)


State 5

   64 comment: LINE_COMMENT .

    $default  reduce using rule 64 (comment)


State 6

   65 comment: MLINE_COMMENT .

    $default  reduce using rule 65 (comment)


State 7

   58 function_call: READSTRING_FUNC . '(' ')'

    '('  shift, and go to state 43


State 8

   59 function_call: READINT_FUNC . '(' ')'

    '('  shift, and go to state 44


State 9

   60 function_call: READREAL_FUNC . '(' ')'

    '('  shift, and go to state 45


State 10

    0 $accept: input . $end

    $end  shift, and go to state 46


State 11

    1 input: final_form .

    $default  reduce using rule 1 (input)


State 12

    3 final_form: decl_list . KW_CONST KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'
   20 decl_list: decl_list . decl
   21          | decl_list . cmd_line
   22          | decl_list . comment
   23 decl: . KW_LET decl_body_part
   24     | . KW_CONST decl_body_part_c
   25     | . KW_CONST func_decl
   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   61 cmd_line: . function_call ';'
   62         | . ident_form_part ASSIGN expr ';'
   63         | . KW_RETURN expr ';'
   64 comment: . LINE_COMMENT
   65        | . MLINE_COMMENT

    KW_CONST         shift, and go to state 47
    KW_LET           shift, and go to state 2
    KW_RETURN        shift, and go to state 3
    IDENTIFIER       shift, and go to state 4
    LINE_COMMENT     shift, and go to state 5
    MLINE_COMMENT    shift, and go to state 6
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9

    decl             go to state 48
    ident_form_part  go to state 14
    function_call    go to state 15
    cmd_line         go to state 49
    comment          go to state 50


State 13

   19 decl_list: decl .

    $default  reduce using rule 19 (decl_list)


State 14

   62 cmd_line: ident_form_part . ASSIGN expr ';'

    ASSIGN  shift, and go to state 51


State 15

   61 cmd_line: function_call . ';'

    ';'  shift, and go to state 52


State 16

   17 decl_list: cmd_line .

    $default  reduce using rule 17 (decl_list)


State 17

   18 decl_list: comment .

    $default  reduce using rule 18 (decl_list)


State 18

    2 final_form: KW_CONST KW_START . ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'

    ASSIGN  shift, and go to state 53


State 19

   38 ident_form_part: IDENTIFIER .  [ASSIGN, ':', ',']
   39                | IDENTIFIER . '[' ']'
   40                | IDENTIFIER . '[' expr ']'

    '['  shift, and go to state 42

    $default  reduce using rule 38 (ident_form_part)


State 20

   25 decl: KW_CONST func_decl .

    $default  reduce using rule 25 (decl)


State 21

   24 decl: KW_CONST decl_body_part_c .

    $default  reduce using rule 24 (decl)


State 22

   31 decl_body_part_c: decl_form_c . ':' data_type ';'
   33 decl_form_c: decl_form_c . ',' ident_form_part ASSIGN expr

    ':'  shift, and go to state 54
    ','  shift, and go to state 55


State 23

   26 func_decl: ident_form_part . ASSIGN '(' func_parameters_decl ')' ':' data_type FUNC_START_ARROW '{' body '}' ';'
   27          | ident_form_part . ASSIGN '(' func_parameters_decl ')' ':' data_type ';'
   28          | ident_form_part . ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type ';'
   29          | ident_form_part . ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type FUNC_START_ARROW '{' body '}' ';'
   32 decl_form_c: ident_form_part . ASSIGN expr

    ASSIGN  shift, and go to state 56


State 24

   23 decl: KW_LET decl_body_part .

    $default  reduce using rule 23 (decl)


State 25

   30 decl_body_part: decl_form . ':' data_type ';'
   35 decl_form: decl_form . ',' decl_assign

    ':'  shift, and go to state 57
    ','  shift, and go to state 58


State 26

   34 decl_form: decl_assign .

    $default  reduce using rule 34 (decl_form)


State 27

   36 decl_assign: ident_form_part .  [':', ',']
   37            | ident_form_part . ASSIGN expr

    ASSIGN  shift, and go to state 59

    $default  reduce using rule 36 (decl_assign)


State 28

   75 expr: KW_TRUE .

    $default  reduce using rule 75 (expr)


State 29

   76 expr: KW_FALSE .

    $default  reduce using rule 76 (expr)


State 30

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   72     | . KW_NOT expr
   72     | KW_NOT . expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36

    ident_form_part  go to state 37
    function_call    go to state 38
    string           go to state 39
    expr             go to state 60


State 31

   73 expr: POSINT .

    $default  reduce using rule 73 (expr)


State 32

   66 string: STRING .

    $default  reduce using rule 66 (string)


State 33

   74 expr: REAL .

    $default  reduce using rule 74 (expr)


State 34

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   71     | '-' . expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36

    ident_form_part  go to state 37
    function_call    go to state 38
    string           go to state 39
    expr             go to state 61


State 35

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   70     | '+' . expr
   71     | . '-' expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36

    ident_form_part  go to state 37
    function_call    go to state 38
    string           go to state 39
    expr             go to state 62


State 36

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   77     | '(' . expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36

    ident_form_part  go to state 37
    function_call    go to state 38
    string           go to state 39
    expr             go to state 63


State 37

   69 expr: ident_form_part .

    $default  reduce using rule 69 (expr)


State 38

   68 expr: function_call .

    $default  reduce using rule 68 (expr)


State 39

   67 expr: string .

    $default  reduce using rule 67 (expr)


State 40

   63 cmd_line: KW_RETURN expr . ';'
   78 expr: expr . '+' expr
   79     | expr . '-' expr
   80     | expr . '*' expr
   81     | expr . '/' expr
   82     | expr . '%' expr
   83     | expr . EQUAL_OP expr
   84     | expr . NOT_EQUAL_OP expr
   85     | expr . LESS_OP expr
   86     | expr . LESS_EQUAL_OP expr
   87     | expr . KW_AND expr
   88     | expr . KW_OR expr

    KW_AND         shift, and go to state 64
    KW_OR          shift, and go to state 65
    NOT_EQUAL_OP   shift, and go to state 66
    LESS_OP        shift, and go to state 67
    LESS_EQUAL_OP  shift, and go to state 68
    EQUAL_OP       shift, and go to state 69
    '-'            shift, and go to state 70
    '+'            shift, and go to state 71
    '*'            shift, and go to state 72
    '/'            shift, and go to state 73
    '%'            shift, and go to state 74
    ';'            shift, and go to state 75


State 41

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   44 func_parameters: . %empty  [')', ',']
   45                | . expr
   46                | . func_parameters ',' expr
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   57              | IDENTIFIER '(' . func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36

    $default  reduce using rule 44 (func_parameters)

    ident_form_part  go to state 37
    func_parameters  go to state 76
    function_call    go to state 38
    string           go to state 39
    expr             go to state 77


State 42

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   39                | IDENTIFIER '[' . ']'
   40                | . IDENTIFIER '[' expr ']'
   40                | IDENTIFIER '[' . expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr

    KW_TRUE          shift, and go to state 28
    KW_FALSE         shift, and go to state 29
    KW_NOT           shift, and go to state 30
    IDENTIFIER       shift, and go to state 4
    POSINT           shift, and go to state 31
    STRING           shift, and go to state 32
    REAL             shift, and go to state 33
    READSTRING_FUNC  shift, and go to state 7
    READINT_FUNC     shift, and go to state 8
    READREAL_FUNC    shift, and go to state 9
    '-'              shift, and go to state 34
    '+'              shift, and go to state 35
    '('              shift, and go to state 36
    ']'              shift, and go to state 78

    ident_form_part  go to state 37
    function_call    go to state 38
    string           go to state 39
    expr             go to state 79


State 43

   58 function_call: READSTRING_FUNC '(' . ')'

    ')'  shift, and go to state 80


State 44

   59 function_call: READINT_FUNC '(' . ')'

    ')'  shift, and go to state 81


State 45

   60 function_call: READREAL_FUNC '(' . ')'

    ')'  shift, and go to state 82


State 46

    0 $accept: input $end .

    $default  accept


State 47

    3 final_form: decl_list KW_CONST . KW_START ASSIGN '(' ')' ':' KW_INT FUNC_START_ARROW '{' body '}'
   24 decl: KW_CONST . decl_body_part_c
   25     | KW_CONST . func_decl
   26 func_decl: . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' data_type FUNC_START_ARROW '{' body '}' ';'
   27          | . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' data_type ';'
   28          | . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type ';'
   29          | . ident_form_part ASSIGN '(' func_parameters_decl ')' ':' '[' ']' data_type FUNC_START_ARROW '{' body '}' ';'
   31 decl_body_part_c: . decl_form_c ':' data_type ';'
   32 decl_form_c: . ident_form_part ASSIGN expr
   33            | . decl_form_c ',' ident_form_part ASSIGN expr
   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'

    KW_START    shift, and go to state 83
    IDENTIFIER  shift, and go to state 19

    func_decl         go to state 20
    decl_body_part_c  go to state 21
    decl_form_c       go to state 22
    ident_form_part   go to state 23


State 48

   20 decl_list: decl_list decl .

    $default  reduce using rule 20 (decl_list)


State 49

   21 decl_list: decl_list cmd_line .

    $default  reduce using rule 21 (decl_list)


State 50

   22 decl_list: decl_list comment .

    $default  reduce using rule 22 (decl_list)


State 51

   38 ident_form_part: . IDENTIFIER
   39                | . IDENTIFIER '[' ']'
   40                | . IDENTIFIER '[' expr ']'
   57 function_call: . IDENTIFIER '(' func_parameters ')'
   58              | . READSTRING_FUNC '(' ')'
   59              | . READINT_FUNC '(' ')'
   60              | . READREAL_FUNC '(' ')'
   62 cmd_line: ident_form_part ASSIGN . expr ';'
   66 string: . STRING
   67 expr: . string
   68     | . function_call
   69     | . ident_form_part
   70     | . '+' expr
   71     | . '-' expr
   72     | . KW_NOT expr
   73     | . POSINT
   74     | . REAL
   75     | . KW_TRUE
   76     | . KW_FALSE
   77     | . '(' expr ')'
   78     | . expr '+' expr
   79     | . expr '-' expr
   80     | . expr '*' expr
   81     | . expr '/' expr
   82     | . expr '%' expr
   83     | . expr EQUAL_OP expr
   84     | . expr NOT_EQUAL_OP expr
   85     | . expr LESS_OP expr
   86     | . expr LESS_EQUAL_OP expr
   87     | . expr KW_AND expr
   88     | . expr KW_OR expr
